# mem012

./: .gitignore  BACKEND_PLAN.md  Cargo.toml  FRONTEND_PLAN.md  README.md  SKILL.md  _PLAN.md  config.example.toml  install.sh  mem012_prompt.md  plan.md  plan2.md
docker/postgres/: Dockerfile
docker/postgres/init/: 001_mem012_init.sql  002_mem012_account.sql
docs/: API_PLAN.md  AUTH.md  CLI_V10.md  DB_PLAN.md  FRONTEND_DEV.md  LOAD_TEST_PLAN.md  PSQL_Account.md  TOOLS.md  create_new_db.md  create_psql_user.md
docs/cli/: SKILL.md  cli_memory.md  delete_memory.md  mark_memory_used.md  read_memory.md  search_memory.md  skill.md  update_memory.md
frontend/: .gitignore  components.json  deploy.sh  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/auth/: AuthContext.ts  AuthProvider.tsx  (+2 more)
scripts/: load_test.py
src/: config.rs  connect_psql.rs  embeddings.rs  main.rs  parse.rs  server.rs
src/api/: auth.rs  changes.rs  cleanup.rs  graph.rs  health.rs  memories.rs  memory.rs  mod.rs  projects.rs  review.rs  trash.rs  turnstile.rs  utils.rs
src/provider/: embedding.rs  http.rs  mod.rs  rerank.rs
src/psql/: age_graph.rs  changes.rs  graph_meta.rs  init_db.rs  memories.rs  mod.rs  profile.rs  relations.rs  search_index.rs
src/tools/: auth.rs  auth_file.rs  backup_memory.rs  cli_help.rs  create_memory.rs  create_profile.rs  delete_memory.rs  graph_status.rs  import_memory.rs  mod.rs  read_memory.rs  rebuild_graph.rs  search_memory.rs  update_memory.rs
(+18 files in other folders)
