[package]
name = "mem_012"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-subscriber = "0.3.23"
dotenvy = "0.15"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
log = "0.4.29"
toml = "1.1.2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
